--- a/app/src/main/res/xml/preference_main.xml
+++ b/app/src/main/res/xml/preference_main.xml
@@ -3,6 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Preference
+        android:key="user_interface_settings"
+        android:title="@string/user_interface_title"
+        android:summary="@string/user_interface_summary"
+        android:icon="@drawable/ic_palette_24_text_color_primary"/>
+
+    <Preference
         android:key="floating_settings"
         android:title="@string/floating_settings_title"
         android:summary="@string/floating_settings_summary"
