UI: Better dark theme!
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/layout/preference_activity.xml
+++ b/app/src/main/res/layout/preference_activity.xml
@@ -9,7 +9,7 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.Danmaqua.AppBar">
+        android:theme="?attr/appBarTheme">
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
