--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,20 @@
 <resources>
 
     <style name="BaseTheme" parent="Theme.MaterialComponents.DayNight">
-        <item name="colorPrimary">@color/material_deep_purple_500</item>
-        <item name="colorPrimaryDark">@color/material_deep_purple_700</item>
-        <item name="colorAccent">@color/material_blue_A400</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="bottomAppBarColor">@color/bottom_appbar_color</item>
-        <item name="android:windowLightStatusBar">true</item>
-        <item name="android:statusBarColor">@color/material_grey_50</item>
+        <item name="android:windowLightStatusBar">@bool/base_theme_light_status_bar</item>
+        <item name="android:statusBarColor">@color/status_bar_color</item>
         <item name="android:navigationBarColor">@color/darken_nav_bar</item>
     </style>
 
-    <style name="Theme.Danmaqua" parent="BaseTheme"></style>
+    <style name="BaseTheme.DayNight" parent="BaseTheme">
+        <item name="appBarTheme">@style/ThemeOverlay.Danmaqua.AppBar.Light</item>
+    </style>
+
+    <style name="Theme.Danmaqua" parent="BaseTheme.DayNight"></style>
 
     <style name="Theme.Danmaqua.NoActionBar" parent="Theme.Danmaqua">
         <item name="windowActionBar">false</item>
@@ -22,9 +26,14 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
-    <style name="ThemeOverlay.Danmaqua.AppBar" parent="ThemeOverlay.MaterialComponents.Light">
-        <item name="colorPrimary">@color/material_grey_50</item>
-        <item name="colorPrimaryDark">@color/material_grey_50</item>
+    <style name="ThemeOverlay.Danmaqua.AppBar.Light" parent="ThemeOverlay.MaterialComponents.Light">
+        <item name="colorPrimary">@color/status_bar_color</item>
+        <item name="colorPrimaryDark">@color/app_bar_color</item>
+    </style>
+
+    <style name="ThemeOverlay.Danmaqua.AppBar.Dark" parent="ThemeOverlay.MaterialComponents.Dark">
+        <item name="colorPrimary">@color/status_bar_color</item>
+        <item name="colorPrimaryDark">@color/app_bar_color</item>
     </style>
 
     <style name="Widget.Danmaqua.IconTextButton" parent="Widget.MaterialComponents.TextView">
