--- a/app/src/main/res/layout/new_subscription_activity.xml
+++ b/app/src/main/res/layout/new_subscription_activity.xml
@@ -1,23 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.NewSubscriptionActivity">
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/roomIdEdit"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/room_id_edit_hint"
-        android:imeOptions="actionGo"
-        android:inputType="numberDecimal"
-        android:textColorHint="?android:attr/textColorHint" />
+        android:theme="?attr/appBarTheme"
+        android:background="@android:color/transparent"/>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/subscribeButton"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/material_purple_500"
-        android:text="@string/action_subscribe"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center_vertical">
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/roomIdEdit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/room_id_edit_hint"
+                android:imeOptions="actionSearch"
+                android:inputType="numberDecimal"
+                android:textColorHint="?android:attr/textColorHint" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <ImageView
+            android:id="@+id/searchButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:padding="12dp"
+            android:src="@drawable/ic_search_24"
+            android:tint="?android:attr/textColorPrimary"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:textColor="?android:attr/colorPrimary"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+        android:text="@string/recommended_streamers_title"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <ProgressBar
+            android:id="@+id/recommendationProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/recommendationFailedView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            android:text="@string/cannot_load_data_text"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recommendationList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/recommended_streamer_list_item"/>
+
+    </FrameLayout>
 
 </LinearLayout>
