Project: Correct "Caption" word to "Subtitle"
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/layout/floating_window_normal_content.xml
+++ b/app/src/main/res/layout/floating_window_normal_content.xml
@@ -15,7 +15,7 @@
         android:layout_weight="1"
         android:layout_margin="12dp"
         android:textColor="?android:attr/textColorPrimary"
-        tools:text="Test Caption"/>
+        tools:text="Test Subtitle"/>
 
     <ImageButton
         android:id="@+id/expandButton"
