App: Fix some bug
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/layout/new_subscription_activity.xml
+++ b/app/src/main/res/layout/new_subscription_activity.xml
@@ -67,26 +67,43 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <ProgressBar
-            android:id="@+id/recommendationProgress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
-
-        <TextView
-            android:id="@+id/recommendationFailedView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-            android:text="@string/cannot_load_data_text"/>
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recommendationList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/recommended_streamer_list_item"/>
+
+        <ProgressBar
+            android:id="@+id/recommendationProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
+        <LinearLayout
+            android:id="@+id/recommendationFailedView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                android:text="@string/cannot_load_data_text"/>
+
+            <Button
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:id="@+id/reloadButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/action_reload"/>
+
+        </LinearLayout>
 
     </FrameLayout>
 
