--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="drawer_view_default_width">360dp</dimen>
 
     <dimen name="app_bar_elevation">4dp</dimen>
+    <dimen name="raised_list_item_elevation">8dp</dimen>
 
     <dimen name="subscription_list_default_padding_top">16dp</dimen>
     <dimen name="subscription_item_view_background_radius">16dp</dimen>
