--- a/app/src/main/res/xml/preference_main.xml
+++ b/app/src/main/res/xml/preference_main.xml
@@ -20,6 +20,11 @@
         android:summary="@string/filter_settings_summary"
         android:icon="@drawable/ic_filter_list_24_text_color_primary"/>
 
+    <Preference
+        android:key="experiment_settings"
+        android:title="@string/experiment_settings_title"
+        android:icon="@drawable/ic_lab_24_text_color_primary"/>
+
     <androidx.preference.PreferenceCategory android:title="@string/about_title">
 
         <Preference
