--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -21,4 +21,7 @@
     <color name="subscription_item_manage_icon_tint">@color/material_light_blue_100</color>
     <color name="subscription_item_manage_icon_background">#990277BD</color>
 
+    <color name="favourite_icon_checked">@color/material_pink_300</color>
+    <color name="favourite_icon_normal">@color/material_grey_300</color>
+
 </resources>
