ManagePatternRules: Add edit dialog for manager & Replaced Danmaqua.Settings.patternFilter (WIP)
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/layout/manage_pattern_rules_item.xml
+++ b/app/src/main/res/layout/manage_pattern_rules_item.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
         android:orientation="vertical">
 
         <TextView
@@ -57,7 +58,6 @@
         android:layout_height="wrap_content"
         android:importantForAccessibility="no"
         android:padding="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:src="@drawable/ic_more_vert_24"
         android:tint="?android:textColorTertiary"
