--- a/app/src/main/res/xml/preference_filter.xml
+++ b/app/src/main/res/xml/preference_filter.xml
@@ -8,7 +8,7 @@
         android:summary="@string/filter_settings_enabled_summary"
         android:icon="@drawable/ic_filter_list_24_text_color_primary"/>
 
-    <androidx.preference.EditTextPreference
+    <Preference
         android:key="filter_pattern"
         android:title="@string/filter_settings_pattern_title"
         android:summary="@string/filter_settings_pattern_summary_format"
