--- a/app/src/main/res/layout/danmaku_history_file_item.xml
+++ b/app/src/main/res/layout/danmaku_history_file_item.xml
@@ -34,7 +34,7 @@
         android:orientation="vertical"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp">
+        android:layout_marginEnd="24dp">
 
         <TextView
             android:id="@+id/titleText"
@@ -43,11 +43,25 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             tools:text="Minato Aqua\'s history"/>
 
-        <TextView
-            android:id="@+id/descText"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="2020-2-20"/>
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/descText"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                tools:text="2020-2-20"/>
+
+            <TextView
+                android:id="@+id/sizeText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="120KB"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
