--- a/app/src/main/res/layout/history_item_info_dialog.xml
+++ b/app/src/main/res/layout/history_item_info_dialog.xml
@@ -43,6 +43,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:text="@string/danmaku_history_dialog_file_size_title"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+        <TextView
+            android:id="@+id/fileSizeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            tools:text="120KB"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:text="@string/danmaku_history_dialog_file_path_title"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
         <TextView
