Main: Add initial message & allow select text to copy in context menu dialog
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/layout/main_danmaku_context_menu_dialog_layout.xml
+++ b/app/src/main/res/layout/main_danmaku_context_menu_dialog_layout.xml
@@ -32,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
+            android:textIsSelectable="true"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             tools:text="Test danmaku. Bala Bala Bala"/>
 
