--- a/app/src/main/res/layout/new_subscription_activity.xml
+++ b/app/src/main/res/layout/new_subscription_activity.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.NewSubscriptionActivity">
+    tools:context=".ui.subscription.NewSubscriptionActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
